Added some text

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,30 @@
       &nbsp;
     </nav>
     <article role='main'>
-
+      <section>
+        <h1>Summary</h1>
+      </section>
+      <section>
+        <h1>Employment</h1>
+        <article>
+          <h1>Web Application Developer</h1>
+          <h2>Senior Service America</h2>
+          <h3>July, 2003 &ndash; Present</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar venenatis orci, et porttitor dolor adipiscing et. Nunc non dapibus odio, eu dictum elit. Praesent eros nisl, molestie in quam ut, luctus tincidunt arcu. Cras vitae arcu lobortis, vestibulum lacus quis, bibendum neque. Aliquam et mollis lectus. Duis fringilla sollicitudin felis, sed pretium ligula congue quis. Morbi a iaculis nulla. Phasellus ornare pretium elementum. Etiam quis porta nibh, eu interdum nulla. Curabitur tincidunt purus viverra.</p>
+        </article>
+        <article>
+          <h1>Development Project Manager</h1>
+          <h2>Gelco Information Network</h2>
+          <h3>April, 2002 &ndash; November, 2002</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar venenatis orci, et porttitor dolor adipiscing et. Nunc non dapibus odio, eu dictum elit. Praesent eros nisl, molestie in quam ut, luctus tincidunt arcu. Cras vitae arcu lobortis, vestibulum lacus quis, bibendum neque. Aliquam et mollis lectus. Duis fringilla sollicitudin felis, sed pretium ligula congue quis. Morbi a iaculis nulla. Phasellus ornare pretium elementum. Etiam quis porta nibh, eu interdum nulla. Curabitur tincidunt purus viverra.</p>
+        </article>
+        <article>
+          <h1>President</h1>
+          <h2>Open Eye, Incorporated</h2>
+          <h3>December, 1999 &ndash; April, 2002</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar venenatis orci, et porttitor dolor adipiscing et. Nunc non dapibus odio, eu dictum elit. Praesent eros nisl, molestie in quam ut, luctus tincidunt arcu. Cras vitae arcu lobortis, vestibulum lacus quis, bibendum neque. Aliquam et mollis lectus. Duis fringilla sollicitudin felis, sed pretium ligula congue quis. Morbi a iaculis nulla. Phasellus ornare pretium elementum. Etiam quis porta nibh, eu interdum nulla. Curabitur tincidunt purus viverra.</p>
+        </article>
+      </section>
     </article>
 	</body>
 </html>
