Using local variables for contact details. No reason to check those in.

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,6 +16,16 @@
     <article role='main'>
       <section>
         <h1>Contact</h1>
+        <dl class='dl-horizontal'>
+          <dt>Email</dt>
+          <dd><%= ENV['contact_email'] %></dd>
+          <dt>Phone</dt>
+          <dd><%= ENV['contact_phone'] %></dd>
+          <dt>Address</dt>
+          <dd><%= ENV['contact_address'] %></dd>
+          <dt>GitHub</dt>
+          <dd>https://github.com/IanWhitney</dd>
+        </dl>
       </section>
       <section>
         <h1>Employment</h1>
