--- a/views/index.erb
+++ b/views/index.erb
@@ -16,15 +16,11 @@
     <article role='main'>
       <section>
         <h1>Contact</h1>
-        <dl class='dl-horizontal'>
-          <dt>Email</dt>
-          <dd><%= ENV['contact_email'] %></dd>
-          <dt>Phone</dt>
-          <dd><%= ENV['contact_phone'] %></dd>
-          <dt>Address</dt>
-          <dd><%= ENV['contact_address'] %></dd>
-          <dt>GitHub</dt>
-          <dd>https://github.com/IanWhitney</dd>
+        <p>
+          <strong>Email</strong>: <%= ENV['contact_email'] %><br />
+          <strong>Phone</strong>: <%= ENV['contact_phone'] %><br />
+          <strong>Address</strong>: <%= ENV['contact_address'] %><br />
+          <strong>GitHub</strong>: https://github.com/IanWhitney<br />
         </dl>
       </section>
       <section>
