have a print stylesheet, but it's not finished

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,8 +6,9 @@
 		<title>Ian Whitney's Resume</title>
 		<meta name="description" content="Ian Whitney's Resume">
 		<meta name="author" content="Ian Whitney">
-		<link href="/stylesheets/bootstrap.css" media="all" rel="stylesheet" type="text/css" />
+		<link href="/stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
 		<link href="/stylesheets/responsive.css" media="screen" rel="stylesheet" type="text/css" />
+		<link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
 	</head>
 	<body class='container'>
 		<header class='page-header hero-unit' role='banner'>
