--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
 		<meta name="author" content="Ian Whitney">
 		<link href="/stylesheets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
 		<link href="/stylesheets/responsive.css" media="screen" rel="stylesheet" type="text/css" />
-		<link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
 	</head>
 	<body class='container'>
 		<header class='page-header hero-unit' role='banner'>
@@ -35,10 +35,12 @@
         <article class='job'>
           <%= jobs['job_12_1999_open_eye'] %>
         </article>
-        <article class='job'>
+      </section>
+      <section>
+        <h1>Personal Projects</h1>
+        <article>
           <%= personal %>
         </article>
-      </section>
     </article>
 	</body>
 </html>
